Fix sticky z-index (Refs #578)

--- a/app/shared/availability-view/availability-view.less
+++ b/app/shared/availability-view/availability-view.less
@@ -163,6 +163,7 @@
     }
     .sticky {
       overflow: hidden;
+      z-index: 10;
     }
     .hours {
       display: flex;
